# reaper-minimal-plugin

./: CMakeLists.txt  README.md
lib/reaper/: reaper_plugin.h  reaper_plugin_functions.h
src/: main.cpp
